<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_genero"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/genero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_estado_civil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:checkedButton="@id/rb_soltero"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.01999998">

        <RadioButton
            android:id="@+id/rb_viudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Viudo" />

        <RadioButton
            android:id="@+id/rb_casado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Casado" />

        <RadioButton
            android:id="@+id/rb_divorciado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Divorciado" />

        <RadioButton
            android:id="@+id/rb_soltero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soltero" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/estado_civil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_genero" />

    <Button
        android:id="@+id/btnImprimir"
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:layout_marginEnd="32dp"
        android:text="@string/imprimir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_estado_civil" />

</androidx.constraintlayout.widget.ConstraintLayout>